--- a/.github/workflows/fhir-validate.yml
+++ b/.github/workflows/fhir-validate.yml
@@ -3,8 +3,10 @@ on:
   push:
     paths:
       - 'backend/**'
+      - 'services/**'                     # <-- antes decía backend/**
       - '.github/workflows/fhir-validate.yml'
   pull_request:
+
 jobs:
   validate:
     runs-on: ubuntu-latest
@@ -13,15 +15,15 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '21'
       - name: Download HL7 FHIR Validator
         run: |
           curl -L -o validator_cli.jar https://github.com/hapifhir/org.hl7.fhir.core/releases/latest/download/validator_cli.jar
-      - name: Validate examples (if present)
+      - name: Validate examples (if any)
         run: |
-          if [ -d backend/tests/fhir-examples ]; then
-            java -jar validator_cli.jar backend/tests/fhir-examples/*.json || true
+          if [ -d services/tests/fhir-examples ]; then
+            java -jar validator_cli.jar services/tests/fhir-examples/*.json -version 4.0
           else
-            echo "No examples found, skipping."
+            echo "No hay ejemplos FHIR para validar, ok.";
           fi
