ci: fix 'pnpm not found' -> use pnpm/action-setup with apps/web/package.json

--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -2,25 +2,25 @@ name: Web Tests
 
 on:
   push:
-    paths:
-      - "apps/web/**"
-      - ".github/workflows/web-test.yml"
+    branches:
+      - main
+      - issue-*
   pull_request:
-    paths:
-      - "apps/web/**"
-      - ".github/workflows/web-test.yml"
+  workflow_dispatch:
 
 jobs:
   vitest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 9
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "20"
           cache: "pnpm"
-      - run: pnpm install --frozen-lockfile
+      - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: apps/web/package.json
+          run_install: false
+      - run: pnpm -v
+      - run: pnpm -C apps/web install --frozen-lockfile=false
       - run: pnpm -C apps/web test:run
