--- a/.github/workflows/ci-min.yml
+++ b/.github/workflows/ci-min.yml
@@ -2,9 +2,7 @@ name: CI Min
 
 on:
   push:
-    branches:
-      - main
-      - issue-*
+    branches: [ main, issue-* ]
   pull_request:
   workflow_dispatch:
 
@@ -17,10 +15,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "pnpm"
+          cache: pnpm
       - uses: pnpm/action-setup@v4
         with:
           package_json_file: apps/web/package.json
+          standalone: true
           run_install: false
       - run: pnpm -v
       - run: pnpm -C apps/web install --frozen-lockfile=false
@@ -32,8 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
+        with: { python-version: "3.12" }
       - run: python -m pip install -U pip
       - run: pip install -r apps/api/requirements.txt
       - name: Import safe modules
