--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:report": "playwright show-report"
   },
   "dependencies": {
     "idb-keyval": "^6.2.2",
@@ -18,9 +24,18 @@
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
+    "@testing-library/jest-dom": "^6.9.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^4.3.0",
+    "@vitest/ui": "^3.2.4",
+    "jsdom": "^27.0.0",
     "typescript": "^5.4.5",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4",
+    "whatwg-fetch": "^3.6.20"
   },
   "packageManager": "pnpm@10.17.1"
 }
