test(web): align vitest 3.x + coverage-v8; fix @testing-library/dom peer; ensure setup/config

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "build": "vite build",
     "e2e:report": "playwright show-report",
     "e2e:ui": "playwright test --ui",
-    "test:run": "vitest run --reporter=dot --passWithNoTests",
+    "test:run": "vitest run",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -25,7 +25,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "vitest": "^3.2.4",
+    "vitest": "3.2.4",
     "vite": "^5.3.4",
     "@vitejs/plugin-react": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4",
@@ -36,8 +36,8 @@
     "@playwright/test": "^1.55.1",
     "whatwg-fetch": "^3.6.20",
     "typescript": "^5.4.5",
-    "@testing-library/dom": "^9.3.4",
-    "@vitest/coverage-v8": "^2.0.5",
+    "@testing-library/dom": "^10.0.0",
+    "@vitest/coverage-v8": "3.2.4",
     "@testing-library/jest-dom": "^6.9.0"
   },
   "packageManager": "pnpm@10.17.1"
