--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,17 +3,6 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "e2e": "playwright test",
-    "e2e:ui": "playwright test --ui",
-    "e2e:report": "playwright show-report"
-  },
   "dependencies": {
     "@tanstack/react-query": "^5.51.21",
     "idb": "^8.0.0",
@@ -41,5 +30,18 @@
     "vitest": "3.2.4",
     "whatwg-fetch": "^3.6.20"
   },
-  "packageManager": "pnpm@10.17.1"
+  "packageManager": "pnpm@10.17.1",
+  "scripts": {
+    "lint": "eslint src --ext .ts,.tsx",
+    "pwa": "vite",
+    "e2e": "playwright test",
+    "e2e:report": "playwright show-report",
+    "dev": "vite",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "build": "vite build",
+    "preview": "vite preview",
+    "e2e:ui": "playwright test --ui",
+    "test": "vitest"
+  }
 }
