chore(docker): add Dockerfiles (web/agents) + compose root-context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 services:
   web:
-    build: ./apps/web
-    environment:
-      - VITE_FHIR_BASE=http://reverse/fhir
-    ports: ["5173:5173"]
-    depends_on: [agents, reverse]
+    build:
+      context: .
+      dockerfile: apps/web/Dockerfile
+    ports:
+      - "5173:80"
+    depends_on: [agents]
   agents:
-    build: ./services/agents-service
+    build:
+      context: .
+      dockerfile: services/agents-service/Dockerfile
     environment:
       - OPA_URL=http://opa:8181/v1/data/fhir/authz/allow
-    ports: ["8070:8070"]
+    ports:
+      - "8070:8070"
   opa:
     image: openpolicyagent/opa:latest
     command: ["run","--server","/policies"]
@@ -24,18 +28,16 @@ services:
     volumes:
       - "./infra/traefik/traefik.yml:/etc/traefik/traefik.yml:ro"
     ports: ["8088:80","8089:8080"]
-  # Opcional Auth
+  # Opcionales
   keycloak:
     image: quay.io/keycloak/keycloak:25.0
     command: ["start-dev","--http-port","8081"]
     ports: ["8081:8081"]
     profiles: ["auth"]
-  # Opcional FHIR
   hapi:
     image: hapiproject/hapi:v7.4.0
     ports: ["8080:8080"]
     profiles: ["fhir"]
-  # Observabilidad (mínimo)
   otel:
     image: otel/opentelemetry-collector:0.99.0
     command: ["--config=/etc/otel/config.yaml"]
