chore(web): normalize scripts

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,10 +38,10 @@
     "e2e:report": "playwright show-report",
     "dev": "vite",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run",
+    "test": "vitest",
     "build": "vite build",
     "preview": "vite preview",
     "e2e:ui": "playwright test --ui",
-    "test": "vitest"
+    "test:run": "vitest run"
   }
 }
