--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,7 @@
-﻿packages:
-  - "apps/*"
-  - "services/*"
-  - "tools/*"
+packages:
+  - apps/*
+  - services/*
+  - tools/*
+
+ignoredBuiltDependencies:
+  - esbuild
